--- a/src/main/resources/ku/cs/information.fxml
+++ b/src/main/resources/ku/cs/information.fxml
@@ -1,179 +1,144 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.DetailUser">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #c9ad88;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.EditInformationController">
    <children>
-      <HBox layoutX="65.0" layoutY="236.0" prefHeight="250.0" prefWidth="1024.0" AnchorPane.leftAnchor="0.0">
+      <VBox layoutX="272.0" layoutY="23.0" prefHeight="625.0" prefWidth="378.0" style="-fx-background-color: white; -fx-background-radius: 20;" AnchorPane.bottomAnchor="22.600000000000023" AnchorPane.topAnchor="23.0">
          <children>
-            <AnchorPane prefHeight="200.0" prefWidth="700.0" style="-fx-background-radius: 10;" styleClass="backgroundColor1" stylesheets="@style/style.css">
+            <AnchorPane prefHeight="625.0" prefWidth="378.0" style="-fx-background-radius: 20; -fx-background-color: white;">
                <children>
-                  <Button layoutX="615.0" layoutY="166.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="74.0" style="-fx-background-color: F99F28;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="บันทึก" textFill="WHITE">
+                  <Button layoutX="242.0" layoutY="653.0" mnemonicParsing="false" onAction="#handleGoToInformationPageWhenEditInformation" prefHeight="28.0" prefWidth="74.0" style="-fx-background-color: F99F28;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="บันทึก" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="20.0" />
                      </font>
                   </Button>
-                  <TextField fx:id="lastnameTextField" layoutX="163.0" layoutY="145.0" prefHeight="31.0" prefWidth="144.0" promptText="Lastname">
+                  <Label layoutX="35.0" layoutY="409.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css">
+                     <font>
+                        <Font name="JasmineUPC" size="36.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="birthdayInEditInformationLabel" layoutX="38.0" layoutY="448.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthday" textAlignment="CENTER">
+                     <font>
+                        <Font name="JasmineUPC" size="25.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="birthMonthInEditInformationLabel" layoutX="101.0" layoutY="448.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthmonth" textAlignment="CENTER">
+                     <font>
+                        <Font name="JasmineUPC" size="25.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="birthYearInEditInformationLabel" layoutX="185.0" layoutY="448.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthyear" textAlignment="CENTER">
+                     <font>
+                        <Font name="JasmineUPC" size="25.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="usernameInEditInformationLabel" layoutX="40.0" layoutY="263.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Username">
+                     <font>
+                        <Font name="JasmineUPC" size="25.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="passwordConditionCheckLabel" layoutX="48.0" layoutY="350.0">
+                     <font>
+                        <Font name="JasmineUPC" size="13.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="passwordCompareLabel" layoutX="48.0" layoutY="399.0">
+                     <font>
+                        <Font name="JasmineUPC" size="13.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="152.0" layoutY="653.0" mnemonicParsing="false" onAction="#handleGotoInformationPageWhenCancel" prefHeight="28.0" prefWidth="74.0" style="-fx-background-color: F99F28;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="ยกเลิก" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="20.0" />
                      </font>
-                     <stylesheets>
-                        <URL value="@style/style.css" />
-                        <URL value="@style/PrimaryTheme.css" />
-                     </stylesheets>
-                     <styleClass>
-                        <String fx:value="backgroundColorAndBorderColor" />
-                        <String fx:value="font_rsu_12pt" />
-                     </styleClass>
-                  </TextField>
-                  <TextField fx:id="firstnameTextField" layoutX="163.0" layoutY="101.0" prefHeight="31.0" prefWidth="144.0" promptText="Firstname">
+                  </Button>
+                  <PasswordField fx:id="passwordField" layoutX="41.0" layoutY="320.0" onKeyReleased="#handleKeyPassword" prefHeight="28.0" prefWidth="324.0" promptText="รหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
                      <font>
-                        <Font name="JasmineUPC" size="20.0" />
+                        <Font name="JasmineUPC" size="16.0" />
                      </font>
-                     <stylesheets>
-                        <URL value="@style/style.css" />
-                        <URL value="@style/PrimaryTheme.css" />
-                     </stylesheets>
-                     <styleClass>
-                        <String fx:value="backgroundColorAndBorderColor" />
-                        <String fx:value="font_rsu_12pt" />
-                     </styleClass>
-                  </TextField>
-                  <TextField fx:id="phoneNumberTextField" layoutX="457.0" layoutY="103.0" prefHeight="31.0" prefWidth="144.0" promptText="หมายเลขโทรศัพท์">
-                     <font>
-                        <Font name="JasmineUPC" size="20.0" />
-                     </font>
-                     <stylesheets>
-                        <URL value="@style/style.css" />
-                        <URL value="@style/PrimaryTheme.css" />
-                     </stylesheets>
-                     <styleClass>
-                        <String fx:value="backgroundColorAndBorderColor" />
-                        <String fx:value="font_rsu_12pt" />
-                     </styleClass>
-                  </TextField>
-                  <Label layoutX="42.0" layoutY="16.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Username">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="343.0" layoutY="16.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Birthday">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="42.0" layoutY="58.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Password">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="42.0" layoutY="102.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Firstname">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="42.0" layoutY="147.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Lastname">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="343.0" layoutY="105.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Phone">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="344.0" layoutY="149.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Sex">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <MenuButton fx:id="sexChoice" layoutX="483.0" layoutY="148.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="92.0" style="-fx-background-radius: 5; -fx-border-radius: 5;" text="เพศ">
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="หญิง" />
-                      <MenuItem mnemonicParsing="false" text="ชาย" />
-                        <MenuItem mnemonicParsing="false" text="ไม่ระบุ" />
-                    </items>
-                     <font>
-                        <Font name="JasmineUPC" size="20.0" />
-                     </font>
-                     <styleClass>
-                        <String fx:value="borderColor" />
-                        <String fx:value="font_rsu_12pt" />
-                        <String fx:value="backgroundColorAndBorderColor" />
-                     </styleClass>
-                     <stylesheets>
-                        <URL value="@style/style.css" />
-                        <URL value="@style/PrimaryTheme.css" />
-                     </stylesheets>
-                  </MenuButton>
-                  <PasswordField fx:id="passwordTextField" layoutX="163.0" layoutY="56.0" prefHeight="32.0" prefWidth="144.0" promptText="password">
-                     <font>
-                        <Font name="JasmineUPC" size="20.0" />
-                     </font>
-                     <stylesheets>
-                        <URL value="@style/style.css" />
-                        <URL value="@style/PrimaryTheme.css" />
-                     </stylesheets>
-                     <styleClass>
-                        <String fx:value="backgroundColorAndBorderColor" />
-                        <String fx:value="font_rsu_12pt" />
-                     </styleClass>
                   </PasswordField>
-                  <Label fx:id="birthdayInEditInformationLabel" layoutX="457.0" layoutY="23.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthday" textAlignment="CENTER">
+                  <Text fill="#7d7d7d" layoutX="46.0" layoutY="314.0" strokeType="OUTSIDE" strokeWidth="0.0" text="รหัสผ่านต้องประกอบด้วยตัวอักษรภาษาอังกฤษและตัวเลข 0-9 มากกว่า 8 หลัก">
                      <font>
-                        <Font name="JasmineUPC" size="25.0" />
+                        <Font name="JasmineUPC" size="14.0" />
                      </font>
-                  </Label>
-                  <Label fx:id="birthMonthInEditInformationLabel" layoutX="519.0" layoutY="23.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthmonth" textAlignment="CENTER">
+                  </Text>
+                  <PasswordField fx:id="recheckPasswordField" layoutX="41.0" layoutY="368.0" onKeyReleased="#handleKeyCheckPassword" prefHeight="28.0" prefWidth="324.0" promptText="ยืนยันรหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
                      <font>
-                        <Font name="JasmineUPC" size="25.0" />
+                        <Font name="JasmineUPC" size="16.0" />
                      </font>
-                  </Label>
-                  <Label fx:id="birthYearInEditInformationLabel" layoutX="601.0" layoutY="23.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthyear" textAlignment="CENTER">
+                  </PasswordField>
+                  <Text fill="#7d7d7d" layoutX="31.0" layoutY="439.0" strokeType="OUTSIDE" strokeWidth="0.0" text="วันเกิด">
                      <font>
-                        <Font name="JasmineUPC" size="25.0" />
+                        <Font name="JasmineUPC" size="30.0" />
                      </font>
-                  </Label>
-                  <Label fx:id="usernameInEditInformationLabel" layoutX="174.0" layoutY="23.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Username">
+                  </Text>
+                  <Text fill="#7d7d7d" layoutX="32.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
                      <font>
-                        <Font name="JasmineUPC" size="25.0" />
+                        <Font name="JasmineUPC" size="30.0" />
                      </font>
-                  </Label>
-                  <Label layoutX="342.0" layoutY="58.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Password">
+                  </Text>
+                  <ImageView fx:id="imageView" fitHeight="90.0" fitWidth="90.0" layoutX="196.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="192.5" AnchorPane.rightAnchor="191.60000000000002">
+                     <image>
+                        <Image url="@image/Default.png" />
+                     </image>
+                  </ImageView>
+                  <Text layoutX="22.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="แก้ไขข้อมูลผู้ใช้">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
-                  </Label>
-                  <PasswordField fx:id="recheckPasswordTextField" layoutX="458.0" layoutY="56.0" prefHeight="32.0" prefWidth="144.0" promptText="recheckPassword">
+                  </Text>
+                  <Line endX="178.6666259765625" endY="-1.52587890625E-5" layoutX="229.0" layoutY="22.0" startX="-63.0" startY="-1.52587890625E-5" />
+                  <Button layoutX="265.0" layoutY="109.0" mnemonicParsing="false" style="-fx-background-color: c9ad88; -fx-background-radius: 20;" text="+" />
+                  <Text fill="#7d7d7d" layoutX="31.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ชื่อผู้ใช้">
                      <font>
-                        <Font name="JasmineUPC" size="20.0" />
+                        <Font name="JasmineUPC" size="30.0" />
                      </font>
-                     <stylesheets>
-                        <URL value="@style/style.css" />
-                        <URL value="@style/PrimaryTheme.css" />
-                     </stylesheets>
-                     <styleClass>
-                        <String fx:value="backgroundColorAndBorderColor" />
-                        <String fx:value="font_rsu_12pt" />
-                     </styleClass>
+                  </Text>
+                  <TextField fx:id="firstnameTextField" layoutX="41.0" layoutY="194.0" prefHeight="28.0" prefWidth="166.0" promptText="ชื่อ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+                     <font>
+                        <Font name="JasmineUPC" size="16.0" />
+                     </font>
+                  </TextField>
+                  <TextField fx:id="lastnameTextField" layoutX="264.0" layoutY="194.0" prefHeight="28.0" prefWidth="166.0" promptText="นามสกุล" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+                     <font>
+                        <Font name="JasmineUPC" size="16.0" />
+                     </font>
+                  </TextField>
+                  <Text fill="#7d7d7d" layoutX="31.0" layoutY="506.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เบอร์โทรศัพท์">
+                     <font>
+                        <Font name="JasmineUPC" size="30.0" />
+                     </font>
+                  </Text>
+                  <PasswordField fx:id="phoneNumberTextField" layoutX="41.0" layoutY="513.0" onKeyReleased="#handleKeyPassword" prefHeight="28.0" prefWidth="324.0" promptText="เบอร์โทรศัพท์" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+                     <font>
+                        <Font name="JasmineUPC" size="16.0" />
+                     </font>
                   </PasswordField>
+                  <Text fill="#7d7d7d" layoutX="31.0" layoutY="571.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เพศ">
+                     <font>
+                        <Font name="JasmineUPC" size="30.0" />
+                     </font>
+                  </Text>
+                  <ComboBox fx:id="sexChoice" layoutX="41.0" layoutY="580.0" onAction="#setSexChoice" prefHeight="27.0" prefWidth="84.0" promptText="เพศ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" />
                </children>
-               <HBox.margin>
-                  <Insets bottom="25.0" left="165.0" top="20.0" />
-               </HBox.margin>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
             </AnchorPane>
          </children>
-      </HBox>
+      </VBox>
    </children>
 </AnchorPane>
