--- a/src/main/resources/ku/cs/home.fxml
+++ b/src/main/resources/ku/cs/home.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -51,14 +52,6 @@
                                 </ImageView>
                             </children>
                         </HBox>
-                        <GridPane fx:id="grid" vgap="10.0" GridPane.rowIndex="2">
-                            <rowConstraints>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            </rowConstraints>
-                            <GridPane.margin>
-                                <Insets bottom="10.0" left="10.0" top="-5.0" />
-                            </GridPane.margin>
-                        </GridPane>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
                      <children>
                               <Label prefHeight="22.0" prefWidth="100.0" text="หนังสือใหม่" textAlignment="CENTER" textFill="RED">
@@ -79,6 +72,7 @@
                               </Label>
                      </children>
                   </HBox>
+                  <FlowPane fx:id="bookListFlowPane" hgap="10.0" prefHeight="200.0" prefWidth="200.0" vgap="10.0" GridPane.rowIndex="2" />
                     </children>
                 </GridPane>
             </center>
