--- a/src/main/resources/ku/cs/pageBookType.fxml
+++ b/src/main/resources/ku/cs/pageBookType.fxml
@@ -46,7 +46,7 @@
                                     <Insets left="40.0" top="13.0" />
                                  </HBox.margin>
                               </MenuButton>
-                              <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">
+                              <Button mnemonicParsing="false" onAction="#handlePageAllTypeBookButton" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">
                                  <font>
                                     <Font name="JasmineUPC" size="25.0" />
                                  </font>
@@ -54,7 +54,7 @@
                                     <Insets left="30.0" right="-20.0" top="13.0" />
                                  </HBox.margin>
                               </Button>
-                              <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ข้อมูลผู้ใช้" textFill="WHITE">
+                              <Button mnemonicParsing="false" onAction="#handleDetailUserButton" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ข้อมูลผู้ใช้" textFill="WHITE">
                                  <font>
                                     <Font name="JasmineUPC" size="25.0" />
                                  </font>
