--- a/src/main/resources/ku/cs/pageBookType.fxml
+++ b/src/main/resources/ku/cs/pageBookType.fxml
@@ -130,7 +130,7 @@
                                     <Insets left="5.0" top="20.0" />
                                  </HBox.margin>
                               </Text>
-                              <Label fx:id="bookType" text="bookType" textFill="#b09f9f">
+                              <Label fx:id="bookType" text="ประเภทที่คุณเลือก" textFill="#b09f9f">
                                  <HBox.margin>
                                     <Insets left="5.0" top="20.0" />
                                  </HBox.margin>
@@ -145,12 +145,12 @@
                         </HBox>
                         <HBox spacing="20.0" GridPane.columnIndex="1">
                            <children>
-                              <Button mnemonicParsing="false" prefHeight="28.0" prefWidth="132.0" style="-fx-background-radius: 20;" text="ราคามากไปน้อย">
+                              <Button fx:id="MaxPriceToLowPriceButton" mnemonicParsing="false" onAction="#handleMaxPriceToLowPrice" prefHeight="28.0" prefWidth="132.0" style="-fx-background-radius: 20;" text="ราคามากไปน้อย">
                                  <font>
                                     <Font name="JasmineUPC" size="20.0" />
                                  </font>
                               </Button>
-                              <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="122.0" style="-fx-background-radius: 20;" text="ราคาน้อยไปมาก">
+                              <Button fx:id="lowPriceToMaxPriceButton" mnemonicParsing="false" onAction="#handleLowPriceToMaxPriceButton" prefHeight="34.0" prefWidth="122.0" style="-fx-background-radius: 20;" text="ราคาน้อยไปมาก">
                                  <font>
                                     <Font name="JasmineUPC" size="20.0" />
                                  </font>
