--- a/src/main/resources/ku/cs/login.fxml
+++ b/src/main/resources/ku/cs/login.fxml
@@ -19,7 +19,12 @@
       <QuadCurve controlX="2.066619873046875" controlY="75.60000610351562" endX="157.26663208007812" endY="-5.20001220703125" fill="#bc986a" layoutX="274.0" layoutY="434.0" startX="-84.06668090820312" startY="-21.4666748046875" stroke="#bc986a" strokeType="INSIDE" />
       <QuadCurve controlX="41.79998779296875" controlY="-98.33331298828125" endX="113.933349609375" endY="-34.333343505859375" fill="#fffae9" layoutX="472.0" layoutY="473.0" startX="-65.3333740234375" startY="-30.066680908203125" stroke="#fffae9" strokeType="INSIDE" />
       <QuadCurve controlX="2.066650390625" controlY="61.4666748046875" endX="113.0" endY="-7.999969482421875" fill="#bc986a" layoutX="930.0" layoutY="438.0" startX="-84.06668090820312" startY="-21.4666748046875" stroke="#bc986a" strokeType="INSIDE" />
-      <Rectangle arcHeight="10.0" arcWidth="10.0" fill="WHITE" height="576.0" layoutX="573.0" layoutY="100.0" stroke="WHITE" strokeType="INSIDE" width="386.0" />
+      <ImageView fitHeight="315.0" fitWidth="589.0" layoutY="223.0" pickOnBounds="true">
+         <image>
+            <Image url="@image/home_login.png" />
+         </image>
+      </ImageView>
+      <Rectangle arcHeight="30.0" arcWidth="30.0" fill="WHITE" height="576.0" layoutX="573.0" layoutY="100.0" stroke="WHITE" strokeType="INSIDE" width="386.0" />
       <Label layoutX="713.0" layoutY="131.0" styleClass="font_jasmine_20pt" text="เข้าสู่ระบบ">
          <font>
             <Font size="31.0" />
