--- a/src/main/resources/ku/cs/pageBookShop.fxml
+++ b/src/main/resources/ku/cs/pageBookShop.fxml
@@ -149,21 +149,25 @@
                                     </opaqueInsets>
                                 </HBox>
                                 <HBox spacing="20.0" GridPane.columnIndex="1">
-                                    <children>
-                                        <Button mnemonicParsing="false" onAction="#handleLowPriceToMaxPrice" prefHeight="28.0" prefWidth="132.0" style="-fx-background-radius: 20;" text="ราคาน้อยไปมาก">
-                                            <font>
-                                                <Font name="JasmineUPC" size="20.0" />
-                                            </font>
-                                        </Button>
-                                        <Button mnemonicParsing="false" onAction="#handleMaxPriceToLowPrice" prefHeight="34.0" prefWidth="122.0" style="-fx-background-radius: 20;" text="ราคามากไปน้อย">
-                                            <font>
-                                                <Font name="JasmineUPC" size="20.0" />
-                                            </font>
-                                        </Button>
-                                    </children>
                                     <GridPane.margin>
                                         <Insets />
                                     </GridPane.margin>
+                           <children>
+                              <HBox spacing="20.0">
+                                 <children>
+                                    <Button mnemonicParsing="false" onAction="#handleLowPriceToMaxPrice" prefHeight="28.0" prefWidth="132.0" style="-fx-background-radius: 20;" text="ราคาน้อยไปมาก">
+                                       <font>
+                                          <Font name="JasmineUPC" size="20.0" />
+                                       </font>
+                                    </Button>
+                                    <Button mnemonicParsing="false" onAction="#handleMaxPriceToLowPrice" prefHeight="34.0" prefWidth="122.0" style="-fx-background-radius: 20;" text="ราคามากไปน้อย">
+                                       <font>
+                                          <Font name="JasmineUPC" size="20.0" />
+                                       </font>
+                                    </Button>
+                                 </children>
+                              </HBox>
+                           </children>
                                 </HBox>
                             </children>
                         </GridPane>
